generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Paciente {
  id        Int        @id @default(autoincrement())
  nome      String
  telefone  String
  email     String?
  consultas Consulta[]
}

model Consulta {
  id                  Int        @id @default(autoincrement())
  data                DateTime
  horario             String
  tipoDeAtendimento   String
  pacienteId          Int
  paciente            Paciente   @relation(fields: [pacienteId], references: [id])
  pagamentos          Pagamento[] 
  registroAtendimento String?    
  formaPagamento      String?    
}

model Pagamento {
  id             Int       @id @default(autoincrement())
  consulta       Consulta  @relation(fields: [consultaId], references: [id])
  consultaId     Int
  valor          Float
  pago           Boolean   @default(false)
  formaPagamento String?   // agora opcional
  data           DateTime  @default(now())
   @@unique([consultaId]) 
}


model Usuario {
  id    Int    @id @default(autoincrement())
  email String @unique
  senha String
  nome  String
}
